# TinyML-Home-Weather-Forecasting

./: .$tinyml_home_weather_forecasting.drawio.dtmp  .gitignore  .project  README.md  codex-steps.txt  freertos_sensor_overview.drawio  home_weather_clock.drawio  microclimate_forecast_model.ipynb  task_delete_result.txt  tinyml_home_weather_forecasting.drawio
machine_learning/local_cnn/: .gitignore  README.md  pyproject.toml  run_wsl_python_with_restart.ps1
machine_learning/local_cnn/scripts/: check_wsl_gpu.sh  check_wsl_tf_status.sh  gpu_device_placement.py  gpu_smoke_test.py  package_runtime_probe.py  plot_baseline_vs_true_range.py  plot_board_vs_baseline_day.py  probe_build_dense_model.py  probe_build_dense_zero_init.py  probe_build_model.py  probe_build_tfkeras_model.py  probe_load_current_model.py  probe_search_model_wsl.py  promote_candidate_to_artifacts.py  reinstall_wsl_tensorflow.sh  run_final_best_training.py  run_long_horizon_residual_full_training.py  run_openmeteo_preflash_candidate.py  run_recent_local_finetune.py  run_selected_6_feature_full_training.py  run_wsl_gpu_device_placement.sh  run_wsl_gpu_smoke.sh  run_wsl_training.sh  run_wsl_training_full.sh  search_conservative_retrain.py  setup_wsl_gpu.sh  tf_probe.py  wsl_tf_clean_probe.sh
machine_learning/local_cnn/src/local_cnn/: __init__.py  benchmark_vs_measurements.py  calibration.py  config.py  data.py  evaluate_vs_measurements.py  feature_ablation.py  features.py  forward_feature_selection.py  modeling.py  pipeline.py  preflash_evaluation.py  pruning.py  quantization.py  runtime.py  search_layers.py  (+4 more)
(+413 files in other folders)
